Fix line wrapping on li

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -230,10 +230,13 @@ ul {
 
 	li {
 		list-style-type: none;
+		padding-left: 1.5rem;
 
 		&::before {
 			color: var(--color-primary-faint);
 			content: '⟐ ';
+			position: absolute;
+			margin-left: -1.5rem;
 		}
 	}
 }
